# lastro

./: CMakeLists.txt  LICENSE  README.md
python/: plot_image_3dhist.py  plot_image_surface.py
src/: CMakeLists.txt  common.cc  core.cc  core.h  dwt2.cc  dwt2.h  main.cc  main_math_ops.cc  main_math_ops.h  main_star_detection.cc  main_star_detection.h  main_star_matching.cc  main_star_matching.h  main_starlist.cc  main_starlist.h  main_starmask.cc  main_starmask.h  star_detection.cc  star_detection.h  star_detection_and_matching.cc  star_detection_and_matching.h  star_matching.cc  star_matching.h  utilities.cc  utilities.h
test/: CMakeLists.txt  test_main.cc  test_star_detection.cc  test_star_matching.cc
